--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ build-job:       # This job runs in the build stage, which runs first.
 
 unit-test-job:   # This job runs in the test stage.
   image: mcr.microsoft.com/playwright
-  stage: test    # It only starts when the job in the build stage completes successfully.
+  stage: test
   script:
     - npm ci
     - npx playwright install --with-deps 
