--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
-
-# Playwright
+# Node modules
 node_modules/
+
+# Playwright reports and cache
 /test-results/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
 
-.env 
+# Allure reports
+allure-results/
+allure-report/
+
+# Environment variables
+.env
