Add gh-pages deploy config

--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
+  "homepage": "https://minhnguyen-eth.github.io/bigtime-playwright",
+  "scripts": {
+    "deploy": "gh-pages -d allure-report",
+    "report": "npx allure generate allure-results --clean -o allure-report && npm run deploy"
+  },
   "devDependencies": {
     "@playwright/test": "^1.53.0",
     "@types/node": "^22.15.21",
     "allure-commandline": "^2.34.0",
     "allure-playwright": "^2.15.1",
+    "gh-pages": "^6.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
-  "scripts": {},
   "dependencies": {
     "dotenv": "^16.5.0",
     "mysql2": "^3.14.1"
-    
   }
 }
