--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "dotenv": "^16.5.0",
-    "mysql2": "^3.14.1"
+    "dotenv": "^16.6.1",
+    "mysql2": "^3.14.1",
+    "uuid": "^11.1.0"
   }
 }
