--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,3 +73,13 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./allure-report
           publish_branch: gh-pages
+
+      - name: Upload test artifacts (screenshots, videos, traces)
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-artifacts
+          path: |
+            test-results/
+            **/screenshots/
+            **/trace.zip
