--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "homepage": "https://minhnguyen-eth.github.io/bigtime-playwright",
   "scripts": {
+    "pretest": "rimraf allure-results allure-report",
+    "test": "npx playwright test",
     "generate": "node generate-report.js",
     "deploy": "gh-pages -d allure-report",
     "report": "npm run generate && npm run deploy"
@@ -11,6 +13,7 @@
     "allure-commandline": "^2.34.0",
     "allure-playwright": "^2.15.1",
     "gh-pages": "^6.3.0",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
