update config git ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,5 +81,8 @@ jobs:
           name: playwright-artifacts
           path: |
             test-results/
-            **/screenshots/
-            **/trace.zip
+            **/screenshots/**
+            **/*.png
+            **/*.webm
+            **/*.zip
+            playwright-report/
