--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Playwright Tests
 
 on:
-  schedule:
-    - cron: "0 1 * * *" # Runs at 8:00 AM UTC every day
+  # schedule:
+  #   - cron: "0 1 * * *" # Runs at 8:00 AM UTC every day
   push:
     branches: [main, master]
   pull_request:
