refactor: ensure Allure report deployment condition always evaluates for consistency

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
           npx allure generate allure-results --clean -o allure-report
 
       - name: Deploy Allure Report to GitHub Pages
-        if: ${{ github.ref == 'refs/heads/main' && github.event_name != 'pull_request' }}
+        if: ${{ always() &&github.ref == 'refs/heads/main' && github.event_name != 'pull_request' }}
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
